--- a/g3-architect.css
+++ b/g3-architect.css
@@ -8,13 +8,16 @@
   font-family: "Work Sans", sans-serif;
   font-style: normal;
 }
-/* shared styles */
+/* shared styles start */
 
 
 
 /* header style */
 .display-flex{
     display: flex;
+}
+.text-primary{
+    color:#ff900E ;
 }
 /* dark-02 */
 .text-gray{
@@ -27,10 +30,12 @@
 .bg-light{
    background-color:  rgba(255, 144, 14, 0.1);
 }
-.header{
-
-
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
 }
+/* shared style end here */
+
 /* navbar style */
 .navbar{
   justify-content: space-between;
@@ -76,12 +81,51 @@ font-weight: 500;
 .banner-image{
     width: 100%;
 }
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+main>section{
+    margin-top:130px;
+}
+/* team and features related style */
+.teams{
+    align-items: center;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 24px;
+}
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+#feature-word{
+   font-size: 2.8rem;
+    font-weight: 600;
+}
 /* responsive media */
 /* small device */
 @media screen and (max-width:576px) {
-    .navbar,.nav-links{
+    .navbar,.nav-links,.teams{
         flex-direction: column;
+    }
+    .team-img-container{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .our-features{
+        margin-left: 20px;
     }
 }
 /* mediaum device */
+@media screen and (min-width:576px) and (max-width:992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin-left: 50px auto;
+    }
+}
 /* large device */
