--- a/g3-architect.css
+++ b/g3-architect.css
@@ -106,6 +106,37 @@ main>section{
    font-size: 2.8rem;
     font-weight: 600;
 }
+/* some fact style */
+.fact-card{
+    border: 1px solid #ff900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 2rem;
+}
+.fact-description{
+    max-width: 540px;
+    
+}
+
 /* responsive media */
 /* small device */
 @media screen and (max-width:576px) {
