sponsor section added and responsive

--- a/g3-architect.css
+++ b/g3-architect.css
@@ -134,21 +134,50 @@ main>section{
 }
 .fact-description{
     max-width: 540px;
-    
-}
 
+}
+/* sponsor related style */
+.sponsor-info,.some-fact-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+   
+}
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
 /* responsive media */
 /* small device */
 @media screen and (max-width:576px) {
     .navbar,.nav-links,.teams{
         flex-direction: column;
     }
-    .team-img-container{
+    .team-img-container,.facts-container,.sponsor-companies{
         grid-template-columns: repeat(1,1fr);
     }
     .our-features{
         margin-left: 20px;
     }
+    .facts-container{
+        justify-items: center;
+        /* gap: 24px; */
+    }
+    .sponsor-companies{
+        justify-items: center; /* Center images horizontally */
+        align-items: center; /* Center images vertically */
+        text-align: center; 
+        gap: 24px;
+    }
+    .sponsor-companies img{
+       max-width: 100%;
+       height: auto;
+    }
+  
+  
 }
 /* mediaum device */
 @media screen and (min-width:576px) and (max-width:992px) {
@@ -157,6 +186,19 @@ main>section{
     }
     .our-features{
         margin-left: 50px auto;
+    }
+    .facts-container{
+        grid-template-columns: repeat(2,1fr);
+        justify-items: center; /* Center images horizontally */
+        align-items: center; /* Center images vertically */
+        text-align: center; 
+    }
+    .sponsor-companies{
+        grid-template-columns: repeat(3,1fr);
+        gap: 50px;
+        justify-items: center; /* Center images horizontally */
+        align-items: center; /* Center images vertically */
+        text-align: center; 
     }
 }
 /* large device */
