features section is added and make it respossive

--- a/g3-architect.css
+++ b/g3-architect.css
@@ -1,281 +1,250 @@
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-.work-sans-font {
-  font-family: "Work Sans", sans-serif;
-  font-style: normal;
-}
-/* shared styles start */
-
-/* header style */
-.display-flex {
-  display: flex;
-}
-.text-primary {
-  color: #ff900e;
-}
-/* dark-02 */
-.text-gray {
-  color: #424242;
-}
-/* dark-03 */
-.text-light-gray {
-  color: #727272;
-}
-.bg-light {
-  background-color: rgba(255, 144, 14, 0.1);
-}
-.section-title {
-  font-size: 2.8rem;
-  font-weight: 700;
-}
-/* shared style end here */
-
-/* navbar style */
-.navbar {
-  justify-content: space-between;
-  align-items: center;
-}
-.nav-item {
-  list-style: none;
-  margin-right: 30px;
-}
-.brand {
-  font-weight: 700;
-  font-size: 2.8rem;
-}
-.nav-link {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  
+  .work-sans-font {
+    font-family: "Work Sans", sans-serif;
+    font-style: normal;
+  }
+  /* shared styles start */
+  
+  
+  
+  /* header style */
+  .display-flex{
+      display: flex;
+  }
+  .text-primary{
+      color:#ff900E ;
+  }
+  /* dark-02 */
+  .text-gray{
+      color: #424242;
+  }
+  /* dark-03 */
+  .text-light-gray{
+      color: #727272;
+  }
+  .bg-light{
+     background-color:  rgba(255, 144, 14, 0.1);
+  }
+  .section-title{
+      font-size: 2.8rem;
+      font-weight: 700;
+  }
+  /* shared style end here */
+  
+  /* navbar style */
+  .navbar{
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav-item{
+      list-style: none;
+      margin-right: 30px;
+  }
+  .brand{
+      font-weight: 700;
+      font-size: 2.8rem;
+  }
+  .nav-link{
   text-decoration: none;
   font-weight: 500;
-}
-.navbar,
-.banner {
-  max-width: 1440px;
-  margin: 0 auto;
-}
-/* banner related style */
-.banner-content {
-  max-width: 850px;
-  margin: 0 auto;
-  text-align: center;
-  margin-bottom: 50px;
-}
-.banner-title {
-  font-weight: 700;
-  font-size: 4rem;
-}
-.btn-primary {
-  background-color: #ff900e;
-  color: white;
-  padding: 20px 25px;
-  border-radius: 8px;
-  font-size: 1.25rem;
-  font-weight: 600;
-  border: none;
-}
-.banner-image {
-  width: 100%;
-}
-main {
-  max-width: 1440px;
-  margin: 0 auto;
-}
-main > section {
-  margin-top: 130px;
-}
-/* team and features related style */
-.teams {
-  align-items: center;
-}
-.team-img-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 24px;
-}
-.our-features {
-  margin-left: 130px;
-  max-width: 530px;
-}
+  }
+  .navbar,.banner{
+      max-width: 1440px;
+      margin: 0 auto;
+  
+  }
+  /* banner related style */
+  .banner-content{
+      max-width: 850px;
+      margin: 0 auto;
+      text-align: center;
+      margin-bottom: 50px;
+  }
+  .banner-title{
+      font-weight: 700;
+      font-size: 4rem;
+  }
+  .btn-primary{
+      background-color: #ff900E;
+      color: white;
+      padding: 20px 25px;
+      border-radius: 8px;
+      font-size: 1.25rem;
+      font-weight: 600;
+      border: none;
+  }
+  .banner-image{
+      width: 100%;
+  }
+  main{
+      max-width: 1440px;
+      margin: 0 auto;
+  }
+  main>section{
+      margin-top:130px;
+  }
+  /* team and features related style */
+  .teams{
+      align-items: center;
+  }
+  .team-img-container{
+      display: grid;
+      grid-template-columns: repeat(2,1fr);
+      gap: 24px;
+  }
+  .our-features{
+      margin-left: 130px;
+      max-width: 530px;
+  }
+  
+  #feature-word{
+     font-size: 2.8rem;
+      font-weight: 600;
+  }
+  /* some fact style */
+  .fact-card{
+      border: 1px solid #ff900E;
+      width: 240px;
+      height: 240px;
+      border-radius: 8px;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+  }
+  .fact-number{
+      font-size: 2.8rem;
+      font-weight: 600;
+      margin-top: 5px;
+      margin-bottom: 10px;
+  }
+  .fact-name{
+      font-size: 1.25rem;
+      font-weight: 600;
+      margin-top: 10px;
+  }
+  .facts-container{
+      display: grid;
+      grid-template-columns: repeat(4,1fr);
+      gap: 2rem;
+  }
+  .fact-description{
+      max-width: 540px;
+  
+  }
+  /* sponsor related style */
+  .sponsor-info,.some-fact-info{
+      max-width: 540px;
+      margin: 50px auto;
+      text-align: center;
+  }
+  .sponsor-companies{
+      display: grid;
+      grid-template-columns: repeat(5,1fr);
+     
+  }
+  .sponsor-companies img{
+      filter: grayscale(100%);
+  }
+  /* feature section related styele */
+  .features{
+    gap: 140px;
+  }
+  #feature-section-title{
+    border-left: 5px solid #ff900E;
+    padding-left: 20px;
 
-#feature-word {
-  font-size: 2.8rem;
-  font-weight: 600;
-}
-/* some fact style */
-.fact-card {
-  border: 1px solid #ff900e;
-  width: 240px;
-  height: 240px;
-  border-radius: 8px;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-.fact-number {
-  font-size: 2.8rem;
-  font-weight: 600;
-  margin-top: 5px;
-  margin-bottom: 10px;
-}
-.fact-name {
-  font-size: 1.25rem;
-  font-weight: 600;
-  margin-top: 10px;
-}
-.facts-container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 2rem;
-}
-.fact-description {
-  max-width: 540px;
-}
-/* sponsor related style */
-.sponsor-info,
-.some-fact-info {
-  max-width: 540px;
-  margin: 50px auto;
-  text-align: center;
-}
-.sponsor-companies {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-}
-.sponsor-companies img {
-  filter: grayscale(100%);
-}
-/* feature section start here */
-.feature-section {
-  display: flex;
-  gap: 30px;
-}
-.features {
-  flex-direction: column;
-  /* justify-content: space-evenly; */
-}
-#feature-section-title {
-  border-left: 5px solid #ff900e;
-  padding-left: 20px;
-}
-
-.feature-card {
-  padding: 40px;
-  box-shadow: 0 4px 30px 0 rgba(0, 0, 0.06);
-  margin-bottom: 20px;
-  border-radius: 8px;
-  height: 13.2rem;
-  width: 44rem;
-}
-.feature-title {
-  font-weight: 600;
-  font-size: 1.25rem;
-}
-.feature-img{
-    width: 23rem;
-}
-.experience {
-  background-color: #ff900e;
-  color: white;
-  font-size: 45px;
-  font-weight: 600;
-  width: 20rem;
-  text-align: center;
-  padding: 10px;
-  border-radius: 8px;
-  position: relative;
-  top: -5rem;
-  right: 10rem;
-}
-/* .experience{
-    visibility: hidden;
-  } */
-/* feature section end here */
-/* responsive media */
-/* small device */
-@media screen and (max-width: 576px) {
-  .navbar,
-  .nav-links,
-  .teams {
-    flex-direction: column;
-  }
-  .team-img-container,
-  .facts-container,
-  .sponsor-companies {
-    grid-template-columns: repeat(1, 1fr);
-  }
-  .our-features {
-    margin-left: 20px;
-  }
-  .facts-container {
-    justify-items: center;
-    /* gap: 24px; */
-  }
-  .sponsor-companies {
-    justify-items: center; /* Center images horizontally */
-    align-items: center; /* Center images vertically */
-    text-align: center;
-    gap: 24px;
-  }
-  .sponsor-companies img {
-    max-width: 100%;
-    height: auto;
-  }
-
-  .feature-section {
-    flex-direction: column;
-    margin: 0 auto;
   }
   .feature-card{
+    padding: 30px;
+    box-shadow: 0 4px 30px 0 rgba(0,0,0,0.06);
+    margin-bottom: 20px;
+    border-radius: 8px;
+  }
+  .feature-card .feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+  #experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin: -100px;
+    margin-top: -100px;
+  }
+  #experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+  }
+  .feature-architect img{
     width: 100%;
   }
-  .feature-img img {
-    width: 100%;
+  /* responsive media */
+  /* small device */
+  @media screen and (max-width:576px) {
+      .navbar,.nav-links,.teams{
+          flex-direction: column;
+      }
+      .team-img-container,.facts-container,.sponsor-companies{
+          grid-template-columns: repeat(1,1fr);
+      }
+      .our-features{
+          margin-left: 20px;
+      }
+      .facts-container{
+          justify-items: center;
+          /* gap: 24px; */
+      }
+      .sponsor-companies{
+          justify-items: center; /* Center images horizontally */
+          align-items: center; /* Center images vertically */
+          text-align: center; 
+          gap: 24px;
+      }
+      .sponsor-companies img{
+         max-width: 100%;
+         height: auto;
+      }
+      .features{
+        flex-direction: column;
+      }
+      #experience-badge{
+         margin-top: 20px;
+         margin-left: 20px;
+      }
+    
+    
   }
-  .experience{
-    top: 1rem;
-    right: -2rem;
+  /* mediaum device */
+  @media screen and (min-width:576px) and (max-width:992px) {
+      .teams,.features{
+          flex-direction: column;
+      }
+      .our-features{
+          margin-left: 50px auto;
+      }
+      .facts-container{
+          grid-template-columns: repeat(2,1fr);
+          justify-items: center; /* Center images horizontally */
+          align-items: center; /* Center images vertically */
+          text-align: center; 
+      }
+      .sponsor-companies{
+          grid-template-columns: repeat(3,1fr);
+          gap: 50px;
+          justify-items: center; /* Center images horizontally */
+          align-items: center; /* Center images vertically */
+          text-align: center; 
+      }
+      #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+     }
   }
- 
-}
-/* mediaum device */
-@media screen and (min-width: 576px) and (max-width: 992px) {
-  .teams {
-    flex-direction: column;
-  }
-  .our-features {
-    margin-left: 50px auto;
-  }
-  .facts-container {
-    grid-template-columns: repeat(2, 1fr);
-    justify-items: center; /* Center images horizontally */
-    align-items: center; /* Center images vertically */
-    text-align: center;
-  }
-  .sponsor-companies {
-    grid-template-columns: repeat(3, 1fr);
-    gap: 50px;
-    justify-items: center; /* Center images horizontally */
-    align-items: center; /* Center images vertically */
-    text-align: center;
-  }
-  .feature-section {
-    flex-direction: column;
-  }
-  .feature-card{
-    width: 100%;
-  }
-  .feature-img img {
-    width: 100%;
-  }
-  .feature-img {
-    margin: 0 auto;
-  }
-  .experience{
-    top: 1rem;
-    right: -6rem;
-  }
-}
-/* large device */
+  /* large device */
